fix content overflow

--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,6 @@ li a {
 footer {
   font-size: .75em;
 }
+.article-content {
+  overflow: hidden;
+}
